--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -57,5 +57,8 @@
   "NAME": "name",
   "GROUP_NAME": "Group Name",
   "UPDATE": "update",
-  "UPDATE_OCSERV_GROUP": "Update Ocserv Group"
+  "UPDATE_OCSERV_GROUP": "Update Ocserv Group",
+  "DELETE_GROUP_TITLE": "delete Ocserv group",
+  "DELETE_MESSAGE": "Are you sure you want to delete this group?",
+  "DELETE_GROUP_MESSAGE_SUB": "After deleting the group, its configuration file will be removed from the server, and users will fall back to the default group settings."
 }
