ocserv user cards and action added

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -59,7 +59,7 @@
   "UPDATE": "update",
   "UPDATE_OCSERV_GROUP": "Update Ocserv Group",
   "DELETE_GROUP_TITLE": "delete Ocserv group",
-  "DELETE_MESSAGE": "Are you sure you want to delete this group?",
+  "DELETE_OCSERV_GROUP_MESSAGE": "Are you sure you want to delete this group?",
   "DELETE_GROUP_MESSAGE_SUB": "After deleting the group, its configuration file will be removed from the server, and users will fall back to the default group settings.",
   "CREATE_OCSERV_USER": "create Ocserv user",
   "UPDATE_OCSERV_USER": "update Ocserv user",
@@ -71,5 +71,23 @@
   "MONTHLY_RECEIVE": "monthly receive",
   "TOTALLY_RECEIVE": "totally receive",
   "TOTALLY_TRANSMIT": "totally transmit",
-  "TRAFFIC_SIZE": "traffic size"
+  "TRAFFIC_SIZE": "traffic size",
+  "USER_SETUP": "user setup",
+  "CONFIGURATION_SETUP": "configuration setup",
+  "DISCONNECT": "disconnect",
+  "LOCK": "lock",
+  "UNLOCK": "unlock",
+  "EDIT": "edit",
+  "DELETE": "delete",
+  "ONLINE": "online",
+  "OFFLINE": "offline",
+  "DELETE_OCSERV_USER_TITLE": "delete Ocserv user",
+  "DELETE_OCSERV_USER_MESSAGE": "Are you sure you want to delete this user?",
+  "DISCONNECT_OCSERV_USER_TITLE": "disconnect Ocserv user",
+  "DISCONNECT_OCSERV_USER_MESSAGE": "Are you sure you want to disconnect this user?",
+  "LOCK_OCSERV_USER_TITLE": "lock Ocserv user",
+  "LOCK_OCSERV_USER_MESSAGE": "Are you sure you want to lock this user?",
+  "UNLOCK_OCSERV_USER_TITLE": "unlock Ocserv user",
+  "UNLOCK_OCSERV_USER_MESSAGE": "Are you sure you want to unlock this user?",
+  "OCSERV_USER_STATISTICS_TITLE": "Ocserv user statistics"
 }
