--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -115,5 +115,8 @@
   "LOGS": "logs",
   "SET_EXPIRE_HINT": "Leave blank to keep the user indefinitely. If set, the user will be deleted after the expiration date.",
   "ACTIVE": "active",
-  "ACCOUNT": "account"
+  "ACCOUNT": "account",
+  "DELETE_ADMIN_USER_TITLE": "Delete Admin user",
+  "DELETE_ADMIN_USER_MESSAGE": "Are you sure you want to delete this user?",
+  "CHANGE_PASSWORD_TITLE": "Change Admin password"
 }
