add  translate, complete service. update ui

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -16,17 +16,17 @@
   "LOGOUT_MESSAGE": "Are you sure you want to log out?",
   "LOGOUT_MESSAGE_SUB": "You will be signed out of your account and redirected to the login page.",
   "LOGOUT_MESSAGE_SUB_2": "You can return to the panel whenever you want. \uD83D\uDE42",
-  "LOGOUT_TITLE": "Logout",
-  "CLOSE": "Close",
-  "CANCEL": "Cancel",
-  "STAFF": "Staff",
-  "ADMIN": "Admin",
-  "CHANGE_PASSWORD": "Change Password",
-  "OCSERV_GROUPS": "Ocserv Groups",
+  "LOGOUT_TITLE": "logout",
+  "CLOSE": "close",
+  "CANCEL": "cancel",
+  "STAFF": "staff",
+  "ADMIN": "admin",
+  "CHANGE_PASSWORD": "change password",
+  "OCSERV_GROUPS": "ocserv groups",
   "HOME": "Home",
-  "OCSERV_USERS": "Ocserv Users",
-  "OCSERV_SERVER": "Ocserv Server",
-  "STATISTICS": "Statistics",
+  "OCSERV_USERS": "ocserv users",
+  "OCSERV_SERVER": "ocserv server",
+  "STATISTICS": "statistics",
   "CURRENT_STATS_PERIOD": "Current Stats Period",
   "CURRENT_SERVER_INFO": "Current Server Info",
   "RX_STATISTICS": "RX Statistics",
@@ -34,7 +34,7 @@
   "ONLINE_USERS": "Online Users",
   "DAYS": "Days",
   "T05": "No users are currently online.",
-  "BAN_IPS": "Ban IPs",
+  "BANNED_IPS": "Banned IPs",
   "T06": "No users are currently banned.",
   "SINCE": "Since",
   "SCORES": "Scores",
@@ -118,5 +118,95 @@
   "ACCOUNT": "account",
   "DELETE_ADMIN_USER_TITLE": "Delete Admin user",
   "DELETE_ADMIN_USER_MESSAGE": "Are you sure you want to delete this user?",
-  "CHANGE_PASSWORD_TITLE": "Change Admin password"
+  "CHANGE_PASSWORD_TITLE": "Change Admin password",
+  "USER_PROFILE": "user profile",
+  "ROLE": "role",
+  "ACCOUNT_CREATED": "create date",
+  "LAST_LOGIN": "last login",
+  "LAST_UPDATED": "last update",
+  "CHANGE": "change",
+  "UNKNOWN_ERROR": "unknown error",
+  "OLD_PASSWORD": "old password",
+  "NEW_PASSWORD": "new password",
+  "CONFIG": "config",
+  "ADMINS": "admins",
+  "SYSTEM_CONFIGS": "system configuration",
+  "EDIT_CONFIG": "edit config",
+  "CREATED_AT": "create date",
+  "UPDATED_AT": "last update",
+  "AUDIT_LOGS": "audit logs",
+  "ACTION": "action",
+  "REASON": "reason",
+  "CHANGES": "changes",
+  "CLEAR": "clear",
+  "SEARCH": "search",
+  "DATE_START": "date start (from)",
+  "DATE_END": "date end (to)",
+  "OCCTL_ACTION_COMMAND": "occtl action command",
+  "VALUE": "value",
+  "EXECUTE": "execute",
+  "OCSERV_USERNAME": "ocserv username",
+  "SHOW_USER_DETAIL": "show ocserv user detail",
+  "OCSERV_USER_ID": "ocserv user id",
+  "DEACTIVATED_AT": "deactivated date",
+  "EXPIRE_AT": "expire at",
+  "CREATE": "create",
+  "DEFAULTS": "defaults",
+  "NBNS": "NetBIOS Name Server",
+  "IPV4_NETWORK": "IPv4 Network",
+  "CIDR_NOTATION": "CIDR notation",
+  "EXPLICIT_IPV4": "Explicit IPv4",
+  "SPECIFIC_IP_ADDRESS": "Specific IP address",
+  "CGROUP": "CGroup",
+  "LINUX_CONTROL_GROUP_NAME": "Linux control group name",
+  "INTERNAL_ROUTE": "Internal Route",
+  "CUSTOM_INTERNAL_ROUTE": "Custom internal route",
+  "RESTRICT_USER_TO_PORTS": "Restrict User To Ports",
+  "ALLOWED_PORTS": "Allowed ports",
+  "RX_DATA_PER_SEC": "RX Data Per Sec",
+  "MAX_RECEIVE_BYTES_PER_SEC": "Max receive bytes/sec",
+  "TX_DATA_PER_SEC": "TX Data Per Sec",
+  "MAX_TRANSMIT_BYTES_PER_SEC": "Max transmit bytes/sec",
+  "NET_PRIORITY": "Net Priority",
+  "TRAFFIC_CLASS_PRIORITY": "Traffic class priority",
+  "KEEPALIVE": "KeepAlive",
+  "KEEPALIVE_INTERVAL_S": "Keepalive interval (s)",
+  "DPD_TIMEOUT": "DPD Timeout",
+  "DEAD_PEER_DETECTION_TIMEOUT": "Dead Peer Detection timeout",
+  "MOBILE_DPD_TIMEOUT": "Mobile DPD Timeout",
+  "MOBILE_DPD_TIMEOUT_S": "Mobile DPD timeout (s)",
+  "MAX_SAME_CLIENTS": "Max Same Clients",
+  "MAX_LOGINS_WITH_SAME_USERNAME": "Max logins with same username",
+  "STATS_REPORT_TIME": "Stats Report Time",
+  "STATS_INTERVAL_S": "Stats interval (s)",
+  "MTU": "MTU",
+  "MAXIMUM_TRANSMISSION_UNIT": "Maximum Transmission Unit",
+  "IDLE_TIMEOUT": "Idle Timeout",
+  "INACTIVITY_TIMEOUT_S": "Inactivity timeout (s)",
+  "MOBILE_IDLE_TIMEOUT": "Mobile Idle Timeout",
+  "MOBILE_INACTIVITY_TIMEOUT_S": "Mobile inactivity timeout (s)",
+  "SESSION_TIMEOUT": "Session Timeout",
+  "MAX_SESSION_DURATION_S": "Max session duration (s)",
+  "DENY_ROAMING": "Deny Roaming",
+  "DISCONNECT_CLIENT_IF_IP_CHANGES": "Disconnect client if its IP changes",
+  "DISABLE_UDP": "Disable UDP",
+  "DISABLES_UDP_ENFORCING_TCP_ONLY_VPN_CONNECTION": "Disables UDP, enforcing TCP-only VPN connection",
+  "TUNNEL_ALL_DNS": "Tunnel All DNS",
+  "FORCE_ALL_DNS_TRAFFIC_THROUGH_VPN_TUNNEL": "Force all DNS traffic through the VPN tunnel",
+  "RESTRICT_USER_TO_ROUTES": "Restrict User To Routes",
+  "ALLOW_CLIENT_ACCESS_ONLY_TO_DEFINED_ROUTES": "Allow client access only to defined routes",
+  "ROUTE": "Route",
+  "ROUTES_ASSIGNED_TO_CLIENT": "Routes assigned to client",
+  "NO_ROUTE": "No Route",
+  "NON_VPN_NETWORKS": "Non-VPN networks",
+  "DNS": "DNS",
+  "DNS_SERVERS_LIST": "DNS servers list",
+  "SPLIT_DNS": "Split DNS",
+  "DNS_SPECIFIC_DOMAINS": "DNS-specific domains",
+  "NAME_SERVER": "name server",
+  "BANNER_HINT": "Text message shown to users when they connect to the VPN",
+  "TRIGGERS_KEY_RENEGOTIATION": "triggers key renegotiation",
+  "OCSERV_SERVER_LOGS": "ocserv server live logs",
+  "CONNECT": "connect",
+  "USER": "user"
 }
